# PT100_Mesh_Datalogger

./: .gitignore  CMakeLists.txt  DIAGNOSTICS.md  README.md  fix_wifi_diag.patch  pt100_diag_mesh_keep_running.patch  pt100_fix_diag_mesh_routerless_root_gitapply.patch  pt100_mesh_channel_teardown.patch  pt100_optionB_scan_all_channels.patch  pt100_optionB_scan_all_channels_v2.patch  sdkconfig.defaults  sdkconfig_N16R8  sdkconfig_N8R2
host_tools/: 2025-12-26.csv  mesh_ingest.py  pt100_csv_plotter.py  pt100_csv_plotter_pdf.py  pt100_csv_plotter_pdf_v2.py
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_settings.c  app_settings.h  boot_mode.c  boot_mode.h  calibration.c  calibration.h  console_commands.c  console_commands.h  crc16.c  crc16.h  data_csv.c  data_csv.h  data_port.c  data_port.h  fram_i2c.c  fram_i2c.h  fram_log.c  fram_log.h  fram_spi.c  fram_spi.h  i2c_bus.c  i2c_bus.h  idf_component.yml  log_record.h  max31865_reader.c  max31865_reader.h  max7219_display.c  max7219_display.h  mesh_addr.h  mesh_transport.c  mesh_transport.h  net_stack.c  net_stack.h  runtime_manager.c  runtime_manager.h  sd_csv_verify.c  sd_csv_verify.h  (+9 more)
main/diagnostics/: diag_common.c  diag_common.h  diag_fram.c  diag_fram.h  diag_mesh.c  diag_mesh.h  diag_rtc.c  diag_rtc.h  diag_rtd.c  diag_rtd.h  diag_sd.c  diag_sd.h  diag_storage.c  diag_storage.h  diag_wifi.c  diag_wifi.h
