idf_component_register(
  SRCS
    "app_main.c"
    "app_settings.c"
    "boot_mode.c"
    "calibration.c"
    "console_commands.c"
    "diagnostics/diag_common.c"
    "diagnostics/diag_fram.c"
    "diagnostics/diag_mesh.c"
    "diagnostics/diag_rtc.c"
    "diagnostics/diag_rtd.c"
    "diagnostics/diag_sd.c"
    "diagnostics/diag_wifi.c"
    "net_stack.c"
    "crc16.c"
    "fram_i2c.c"
    "fram_log.c"
    "fram_spi.c"
    "i2c_bus.c"
    "max31865_reader.c"
    "pt100_table.c"
    "mesh_transport.c"
    "runtime_manager.c"
    "sd_csv_verify.c"
    "sd_logger.c"
    "wifi_manager.c"
    "time_sync.c"
  INCLUDE_DIRS "."
  REQUIRES
    nvs_flash
    esp_netif
    esp_wifi
    esp_event
    esp_timer
    console
    vfs
    fatfs
    sdmmc
    driver
    esp_rom
    mbedtls
)
